<resources>
    <string name="app_name">sample-compose-components</string>
    <string name="long_text">Lorem ipsum dolor sit amet, id cum ullum deseruisse solet.</string>
    <string name="longer_text">Lorem ipsum dolor sit amet, ne nec regione nostrum. Quo altera nusquam apeirian et, melius discere pro ne, sint unum.</string>
    <string name="longest_text">Lorem ipsum dolor sit amet, his ne quis phaedrum. Illum eloquentiam in pro, aperiam conceptam complectitur cum in, eum paulo
		ceteros at. Vel erroribus adversarium at, integre omnesque eu est. Appareat expetenda cum no. Erant omnes interesset pro at, id mei munere moderatius,
		ius ne ignota perpetua.
	</string>
    <string name="title_activity_main">Components</string>
    <string name="title_atoms">Atoms</string>
    <string name="title_molecules">Molecules</string>
    <string name="title_organisms">Organisms</string>
    <string name="title_colors">Colors</string>
    <string name="shuttering_default_title">Service unavailable</string>
    <string name="shuttering_default_description">You’ll be able to use the Help to Save service later.</string>
    <string name="status_card_default_title">Join Help To Save</string>
    <string name="status_card_default_description">Be rewarded for taking care of your money!</string>
    <string name="full_screen_notification_default_title">It is time to save!</string>
    <string name="full_screen_notification_default_description">Make a deposit in your help to save account to keep your payment streak going</string>
    <string name="color_name_with_hex">%s (%s)</string>
    <string name="colors_black">Black</string>
    <string name="colors_white">White</string>
    <string name="colors_green_1">Green 1</string>
    <string name="colors_green_2">Green 2</string>
    <string name="colors_blue">Blue</string>
    <string name="colors_teal">Teal</string>
    <string name="colors_red">Red</string>
    <string name="colors_grey_1">Grey 1</string>
    <string name="colors_grey_2">Grey 2</string>
    <string name="colors_grey_3">Grey 3</string>
    <string name="colors_pink">Pink</string>
    <string name="colors_yellow">Yellow</string>
    <string name="colors_white_background">White background</string>
    <string name="colors_always_black">Always black</string>
    <string name="colors_always_white">Always white</string>
    <string name="atoms_text">Text</string>
    <string name="atoms_buttons">Buttons</string>
    <string name="atoms_attributed_strings">Attributed Strings</string>
    <string name="atoms_divider">Divider</string>
    <string name="molecules_h4">H4 Title Body View</string>
    <string name="molecules_h5">H5 Title Body View</string>
    <string name="molecules_bold">Bold Title Body View</string>
    <string name="molecules_inset">Inset View</string>
    <string name="molecules_inset_text">Inset Text View</string>
    <string name="molecules_text_input_view">Text Input View</string>
    <string name="molecules_currency_input_view">Currency Input View</string>
    <string name="molecules_multi_column_row">Multi Column Row View</string>
    <string name="molecules_switch_row">Switch Row View</string>
    <string name="molecules_status">Status View</string>
    <string name="molecules_warning">Warning View</string>
    <string name="molecules_tab_bar">Tab Bar View</string>
    <string name="molecules_select_row">Select Row View</string>
    <string name="molecules_bottom_sheet">Bottom Sheet View</string>
    <string name="molecules_donut_chart">Donut Chart View</string>
    <string name="molecules_password_input_view">Password Input View</string>
    <string name="organisms_text_input">Text Input View</string>
    <string name="organisms_currency_input">Currency Input View</string>
    <string name="organisms_headline_card">Headline Card View</string>
    <string name="organisms_primary_card">Primary Card View</string>
    <string name="organisms_info_message_card">Information Message Card View</string>
    <string name="organisms_status_card">Status Card View</string>
    <string name="organisms_icon_button_card">Icon Button Card View</string>
    <string name="organisms_summary_row">Summary Row View</string>
    <string name="organisms_separated_view_container">Separated View Container</string>
    <string name="organisms_menu_panel_row">Menu Panel Row View</string>
    <string name="separated_view_container_placeholder_text_1">Item 1</string>
    <string name="separated_view_container_placeholder_text_2">Item 2</string>
    <string name="separated_view_container_placeholder_text_3">Item 3</string>
    <string name="title_body_cta_placeholder_title">Title</string>
    <string name="title_body_cta_placeholder_body">Body</string>
    <string name="title_body_cta_placeholder_button">Button</string>
    <string name="title_body_cta_example_title">Renew your tax credits</string>
    <string name="title_body_cta_example_body">Renew your tax credits or check the progress of your claims</string>
    <string name="title_body_cta_example_button">Renew or check my claims</string>
    <string name="status_card_placeholder_title">Title</string>
    <string name="status_card_placeholder_body">Body</string>
    <string name="status_card_placeholder_primary_button">Primary button</string>
    <string name="status_card_placeholder_secondary_button">Secondary button</string>
    <string name="status_card_placeholder_info_text">Info text</string>
    <string name="status_card_example_1_title">Service unavailable</string>
    <string name="status_card_example_1_body">You\'ll need to try again later.</string>
    <string name="status_card_example_1_body_content_desc">You\'ll need to try again later content description</string>
    <string name="status_card_example_2_title">Your Help to Save account closed on 21 May 2018</string>
    <string name="status_card_example_3_title">You can\'t access John Smith\'s information right now</string>
    <string name="status_card_example_3_body">We have been told that John Smith is deceased so we can\'t show the information you are expecting.\n\nIf you need to discuss this account, please contact the PAYE helpline.</string>
    <string name="status_card_example_3_button_1">Call 0300 200 3300</string>
    <string name="status_card_example_3_button_2">Learn about call charges</string>
    <string name="status_card_example_4_title">You are currently offline</string>
    <string name="status_card_example_4_body">It appears as if you are not connected to the internet. Check your connection and try again.</string>
    <string name="status_card_example_4_button">Try again</string>
    <string name="status_card_example_4_info">DDC3ABB2&#8211;E830&#8211;4B68&#8211;8AA4&#8211;1923579B9879</string>
    <string name="multi_column_row_placeholder_text1">Text 1</string>
    <string name="multi_column_row_placeholder_text2">Text 2</string>
    <string name="multi_column_row_placeholder_text3">Text 3</string>
    <string name="multi_column_row_example_text_1">Estimated annual income</string>
    <string name="multi_column_row_example_text_2">£24,000</string>
    <string name="multi_column_row_example_text_3">£31,865</string>
    <string name="multi_column_row_example_text_4">20%</string>
    <string name="multi_column_row_example_text_5">£6,373</string>
    <string name="multi_column_row_example_text_6">Account number</string>
    <string name="multi_column_row_example_text_7">10084712</string>
    <string name="multi_column_row_example_text_8">Heading</string>
    <string name="switch_row_placeholder_title">Title</string>
    <string name="switch_row_placeholder_body_on">Body. Switch: on</string>
    <string name="switch_row_placeholder_body_off">Body. Switch: off</string>
    <string name="switch_row_example_1_title">Start of the month</string>
    <string name="switch_row_example_1_body">Get a reminder on the first day of each month</string>
    <string name="switch_row_example_2_title">End of the month</string>
    <string name="switch_row_example_2_body">Get a reminder 5 days before the end of each month</string>
    <string name="switch_row_example_3_title">Fingerprint ID</string>
    <string name="switch_row_example_4_title">@string/long_text</string>
    <string name="switch_row_example_5_title">@string/long_text</string>
    <string name="switch_row_example_5_body">@string/longest_text</string>
    <string name="switch_row_enabled">Enabled</string>
    <string name="switch_row_disabled">Disabled</string>
    <string name="switch_row_example_1_enabled_content_desc">Start of the month reminders enabled</string>
    <string name="switch_row_example_1_disabled_content_desc">Start of the month reminders disabled</string>
    <string name="switch_row_example_1_enabled_toast">Start of the month: enabled</string>
    <string name="switch_row_example_1_disabled_toast">Start of the month: disabled</string>
    <string name="switch_row_example_2_enabled_toast">End of the month: enabled</string>
    <string name="switch_row_example_2_disabled_toast">End of the month: disabled</string>
    <string name="switch_row_example_3_enabled_toast">Fingerprint ID: enabled</string>
    <string name="switch_row_example_3_disabled_toast">Fingerprint ID: disabled</string>
    <string name="switch_row_example_4_enabled_toast">Long text 1: enabled</string>
    <string name="switch_row_example_4_disabled_toast">Long text 1: disabled</string>
    <string name="switch_row_example_5_enabled_toast">Long text 2: enabled</string>
    <string name="switch_row_example_5_disabled_toast">Long text 2: disabled</string>
    <string name="summary_row_placeholder_title">Title</string>
    <string name="summary_row_placeholder_row1_text1">Text 1</string>
    <string name="summary_row_placeholder_row1_text2">Text 2</string>
    <string name="summary_row_placeholder_row1_text3">Text 3</string>
    <string name="summary_row_example_1a_title">Sainsbury\'s PLC</string>
    <string name="summary_row_example_1a_row1_text1">Payroll</string>
    <string name="summary_row_example_1a_row1_text2">96245SLJK88</string>
    <string name="summary_row_example_1a_row2_text1">Tax code</string>
    <string name="summary_row_example_1a_row2_text2">1185L</string>
    <string name="summary_row_example_1a_row3_text1">Estimated taxable income</string>
    <string name="summary_row_example_1a_row3_text2">£5,690</string>
    <string name="summary_row_example_1a_accessibility_message">Sainsbury\'s PLC. Button. Double tap to change these details in your web browser.</string>
    <string name="summary_row_example_1b_title">Eastwood Charter School (7601)</string>
    <string name="summary_row_example_1b_row1_text1">Tax code</string>
    <string name="summary_row_example_1b_row1_text2">BR</string>
    <string name="summary_row_example_1b_row2_text1">Estimated taxable income</string>
    <string name="summary_row_example_1b_row2_text2">£4,143</string>
    <string name="summary_row_example_2_title">Fingerprint ID</string>
    <string name="summary_row_example_2_row1_text1">On</string>
    <string name="summary_row_example_2_accessibility_title">Fingerprint ID, on</string>
    <string name="summary_row_example_2_accessibility_action">activate</string>
    <string name="inset_placeholder_text">Nested content goes here</string>
    <string name="inset_example_text_line_1_description">Account Number:</string>
    <string name="inset_example_text_line_1_value"><b>12345678</b></string>
    <string name="inset_example_text_line_2_description">Sort Code:</string>
    <string name="inset_example_text_line_2_value"><b>12-34-56</b></string>
    <string name="inset_example_text_line_3_description">Payment Reference:</string>
    <string name="inset_example_text_line_3_value"><b>Testing 789</b></string>
    <string name="inset_text_placeholder_text">Inset text</string>
</resources>